# IntegrationService-UDPBridge

./: CMakeLists.txt  README.md
config/: is_config_client.xml  is_config_server.xml
include/: UDPBridge.hpp  UDPReader.hpp  UDPWriter.hpp  logger.hpp
src/: udp.cpp
